2008-10-06  Christian Rose  <menthos@gnome.org>

	* translation-teams.xml.in: Cleaned up coordinator id information
	for a lot of teams, including br, eo, io, lv, tl, tk, and ug.

2008-10-06  Christian Rose  <menthos@gnome.org>

	* translation-teams.xml.in: Updated web page for Swedish team.

2008-10-06  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Removed gimp-2-4 branch.

2008-10-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: obsolete bug-buddy docs has been removed from SVN.

2008-10-02  Johannes Schmid  <jhs@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	gdl and gnome-build branched for GNOME 2.24

2008-10-01  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: nautilus and eel branched for GNOME 2.24.

2008-09-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gcalctool branched for GNOME 2.24.

2008-09-27  Goran Rakić  <grakic@devbase.net>

	* update-stats.py: Use hidden teams for doc stats too (bug #553695).

2008-09-27  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Added Kazakh translation team.

2008-09-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-desktop, gnome-settings-daemon,
	gnome-control-center, hamster-applet, gtk-engines branched for 2.24.

2008-09-25  Johannes Schmid  <jhs@gnome.org>

	* releases.xml.in
	* gnome-modules.xml.in: Branched anjuta for gnome-2-24

2008-09-25  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: GNOME 2.24 is now stable. Thanks pterjan for
	noticing ;-)

2008-09-25  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: Added Bob.
	* translation-teams.xml.in: Robert-André Mauchin is the French team leader
	for GNOME 2.26.

2008-09-25  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:  gconf-editor branched for GNOME 2.24.

2008-09-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: