@@ -307,7 +307,7 @@
     <icon>http://planet.gnome.org/heads/leonardof.png</icon>
   </person>
   <!-- br translation coordinator -->
-  <person id="x-jeremyarfloch">
+  <person id="jeremylf">
     <name>Jérémy Ar Floc'h</name>
     <email>jeremy.lefloch@gmail.com</email>
   </person>
@@ -393,7 +393,7 @@
     <email>pema_geyleg@rediffmail.com</email>
   </person>
   <!-- eo translation coordinator -->
-  <person id="x-guillaumesavaton">
+  <person id="gsavaton">
     <name>Guillaume Savaton</name>
     <email>llumeao@gmail.com</email>
   </person>
@@ -556,7 +556,7 @@
     <email>erdal.ronahi@gmail.com</email>
   </person>
   <!-- lv translation coordinator -->
-  <person id="x-raivisdejus">
+  <person id="rdejus">
     <name>Raivis Dejus</name>
     <email>orvils@gmail.com</email>
   </person>
@@ -755,7 +755,7 @@
     <icon>http://planet.gnome.org/heads/menthos.png</icon>
   </person>
   <!-- tl translation coordinator -->
-  <person id="x-ericpareja">
+  <person id="epareja">
     <name>Eric Pareja</name>
     <email>xenos@upm.edu.ph</email>
   </person>
@@ -790,12 +790,12 @@
     <email>baris@teamforce.name.tr</email>
   </person>
   <!-- tk translation coordinator -->
-  <person id="x-ghorbanmtavakoly">
+  <person id="ghomota">
     <name>Ghorban M. Tavakoly</name>
     <email>gmtavakkoli@yahoo.com</email>
   </person>
   <!-- ug translation coordinator -->
-  <person id="x-abdurixitabduxukur">
+  <person id="aabdurix">
     <name>Abdurixit Abduxukur</name>
     <email>abduxukur.abdurixit@t-systems.ch</email>
   </person>
@@ -850,7 +850,7 @@
     <email>dwayne@translate.org.za</email>
   </person>
   <!-- io translation coordinator -->
-  <person id="x-mterry">
+  <person id="mterry">
     <name>Michael Terry</name>
     <email>mike@mterry.name</email>
     <bugzilla-account>mike@mterry.name</bugzilla-account>
