@@ -1,5 +1,9 @@
 2008-10-06  Christian Rose  <menthos@gnome.org>
 
+	* people.xml.in: Doh, make the corresponding change here as well!
+
+2008-10-06  Christian Rose  <menthos@gnome.org>
+
 	* translation-teams.xml.in: Cleaned up coordinator id information
 	for a lot of teams, including br, eo, io, lv, tl, tk, and ug.
 
